tests/fixtures/errors/dim_mismatch_add.gcl
// error: cannot add Length + Time
param alt: Length = 400.0 km;
param period: Time = 90.0 min;
node bad: Length = @alt + @period;
